# guanxi

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cat.hs  Free.hs  LICENSE.md  Logic.hs  MODULES.md  README.md  Unaligned.hs  Unified.hs  guanxi.cabal  questions.txt  test.sh
.github/workflows/: ci.yml
Logic/: CPS.hs  Class.hs  Fast.hs  Naive.hs
cbits/: Makefile  dlx.cpp  dlx.hpp  dlx_capi.cpp  dlx_capi.h  dlx_queens.cpp  dxz.cpp  dxz.hpp  dxz_capi.cpp  dxz_capi.h  dxz_queens.cpp  queens.cpp
src/: Aligned.hs  Cell.hs  Cover.hs  Disjoint.hs  Dyn.hs  Env.hs  Equality.hs  FD.hs  FDVar.hs  Free.hs  Freer.hs  Future.hs  Group.hs  Key.hs  Log.hs  Par.hs  Promise.hs  Ref.hs  SAT.hs  Sharing.hs  Signal.hs  Sink.hs  Skew.hs  SkewMaybe.hs  Tactic.hs  Unaligned.hs  Unification.hs  Unified.hs  Unique.hs  Vec.hs
src/Aligned/: Base.hs  Free.hs  Freer.hs  Internal.hs  Prompt.hs
src/Back/: Class.hs  Ref.hs
src/Cover/: DLX.hs  DXZ.hs
src/Domain/: Internal.hs  Interval.hs  Relational.hs
src/FD/: Monad.hs  Var.hs
src/Internal/: Aligned.hs  Env.hs  Skew.hs  Unaligned.hs
src/Key/: Coercible.hs
src/Logic/: CPS.hs  Class.hs  Cont.hs  ContUnwind.hs  Naive.hs  Reflection.hs
src/Par/: Class.hs  Cont.hs  Future.hs  Monad.hs  Promise.hs
src/Prompt/: Class.hs  Iterator.hs  Reflection.hs
src/Ref/: Base.hs  Cell.hs  Disjoint.hs  Env.hs  Key.hs  Log.hs  Rem.hs  Signal.hs  Sink.hs
src/Relative/: Base.hs  Internal.hs
src/Unaligned/: Base.hs  Internal.hs  Skew.hs
src/Unification/: Class.hs  Meta.hs
t/: doctest.hs  doctests.hs
test/: doctest-main.hs  doctest.json  hedgehog.hs  queens.hs  spec-main.hs  spec.hs
test/Cover/: DLXSpec.hs
test/Domain/: IntervalSpec.hs
test/FD/: MonadSpec.hs
test/Logic/: ReflectionSpec.hs
test/Prompt/: IteratorSpec.hs
test/Spec/: Ref.hs
test/Spec/Cover/: DLX.hs
test/Spec/Domain/: Interval.hs
test/Spec/FD/: Monad.hs
test/Spec/Logic/: Reflection.hs
test/Spec/Prompt/: Iterator.hs
test/Spec/Unaligned/: Base.hs
test/Unaligned/: BaseSpec.hs
wip/: FD.hs  ProbabilisticTree.hs  Prop.hs  RationalArithmetic.hs  Walk.hs
