cabal-version: 2.2
name:          guanxi
category:      Logic
version:       0
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/guanxi/
bug-reports:   http://github.com/ekmett/guanxi/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
synopsis:      Relational programming
description:   Propagator-based relational programming in Haskell.
build-type:    Simple
extra-source-files:
  .hlint.yaml
  CHANGELOG.md
  QUESTIONS.md
  README.md
  test/doctest.json
  cbits/queens.cpp
  cbits/Makefile

source-repository head
  type: git
  location: git://github.com/ekmett/guanxi.git

--------------------------------------------------------
-- * Library
--------------------------------------------------------

common base
  ghc-options: -Wall -Wextra
  default-language: Haskell2010
  build-depends: base >= 4.12 && < 5

library
  import: base
  hs-source-dirs: src

  -- C++ bits
  cxx-options: -std=c++11 -Wall -g
  cxx-sources:
    cbits/dlx.cpp cbits/dlx_capi.cpp
    cbits/dxz.cpp cbits/dxz_capi.cpp
  include-dirs: cbits
  extra-libraries: stdc++

  build-depends:
    comonad,
    containers,
    contravariant,
    data-default,
    fingertree,
    ghc-prim,
    hashable,
    lens,
    mtl                 >= 2.2.2 && < 2.3,
    primitive,
    transformers        >= 0.5.5 && < 0.6,
    unordered-containers

  exposed-modules:
    Aligned.Internal
    Aligned.Base
    Aligned.Free
    Aligned.Freer
    Cover.DLX
    Cover.DXZ
    Equality
    FD.Monad
    FD.Var
    Key
    Key.Coercible
    Logic.Class
    Logic.Cont
    Logic.Naive
    Logic.Reflection
    Par.Cont
    Par.Class
    Par.Future
    Par.Promise
    Ref
    Ref.Disjoint
    Ref.Signal
    Ref.Sink
    Ref.Env
    Ref.Log
    Prompt.Class
    Prompt.Iterator
    Prompt.Reflection
    Sharing
    Tactic
    Unaligned.Base
    Unaligned.Internal
    Unification.Class
    Unique

--------------------------------------------------------
-- * Tests
--------------------------------------------------------

common test
  import: base
  build-depends: guanxi
  ghc-options: -threaded -rtsopts
  hs-source-dirs: test

test-suite doctest
  import: test
  type: exitcode-stdio-1.0
  main-is: doctest-main.hs
  build-depends: doctest
  build-tool-depends: doctest-discover:doctest-discover

test-suite spec
  import: test
  type: exitcode-stdio-1.0
  main-is: spec-main.hs
  other-modules: Spec
  build-depends: hspec >= 2 && < 3
  build-tool-depends: hspec-discover:hspec-discover

test-suite queens
  import: test
  type: exitcode-stdio-1.0
  main-is: queens.hs
