cabal-version: 2.2
name:          guanxi
category:      Logic
version:       0
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/guanxi/
bug-reports:   http://github.com/ekmett/guanxi/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
synopsis:      Relational programming
description:   Propagator-based relational programming in Haskell.
build-type:    Simple
extra-source-files:
  .hlint.yaml
  CHANGELOG.md
  README.md
  test/doctest.json
  cbits/dlx_queens.cpp
  cbits/dxz_queens.cpp
  cbits/*.h
  cbits/*.hpp
  cbits/Makefile

source-repository head
  type: git
  location: git://github.com/ekmett/guanxi.git

--------------------------------------------------------
-- * Library
--------------------------------------------------------

common base
  ghc-options: -Wall -Wextra
  default-language: Haskell2010
  build-depends: base >= 4.12 && < 5

common mtl
  build-depends: mtl >= 2.2.2 && < 2.3,

common primitive
  build-depends: primitive

library
  import: base, mtl, primitive
  hs-source-dirs: src

  -- C++ bits
  cxx-options: -std=c++11 -Wall -g
  cxx-sources:
    cbits/dlx.cpp cbits/dlx_capi.cpp
    cbits/dxz.cpp cbits/dxz_capi.cpp
  include-dirs: cbits
  extra-libraries: stdc++

  build-depends:
    comonad,
    containers,
    contravariant,
    data-default,
    fingertree,
    ghc-prim,
    hashable,
    lens,
    transformers        >= 0.5.5 && < 0.6,
    unordered-containers

  exposed-modules:
    Aligned.Internal
    Aligned.Base
    Aligned.Free
    Aligned.Freer
    Cover.DLX
    Cover.DXZ
    Disjoint
    Domain.Interval
    Domain.Relational
    Equality
    FD.Monad
    FD.Var
    Group
    Key
    Key.Coercible
    Log
    Logic.Class
    Logic.Cont
    Logic.Naive
    Logic.Reflection
    Par.Cont
    Par.Class
    Par.Future
    Par.Promise
    Ref
    Relative.Base
    Relative.Internal
    Sink
    Prompt.Class
    Prompt.Iterator
    Prompt.Reflection
    Sharing
    Signal
    Tactic
    Unaligned.Base
    Unaligned.Internal
    Unification.Class
    Unique

--------------------------------------------------------
-- * Tests
--------------------------------------------------------

common test
  import: base
  build-depends: guanxi
  ghc-options: -threaded -rtsopts
  hs-source-dirs: test

test-suite spec
  import: test, mtl, primitive
  type: exitcode-stdio-1.0
  main-is: spec.hs
  other-modules:
    Cover.DLXSpec
    Domain.IntervalSpec
    FD.MonadSpec
    Prompt.IteratorSpec
  build-depends:
    hspec >= 2 && < 3,

test-suite queens
  import: test
  type: exitcode-stdio-1.0
  main-is: queens.hs
